--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">GeoFence</string>
+    <string name="center_point_coordinates">Center point coordinates</string>
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
+    <string name="radius">Radius</string>
+    <string name="start">start</string>
+    <string name="wifi_name">WiFi name</string>
 </resources>
