--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="start">start</string>
     <string name="wifi_name">WiFi name</string>
     <string name="no_internet_message">Sorry wifi is not available</string>
+    <string name="current">current</string>
 </resources>
