--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="center_point_coordinates">Center point coordinates</string>
     <string name="latitude">Latitude</string>
     <string name="longitude">Longitude</string>
-    <string name="radius">Radius</string>
+    <string name="radius">Radius (in meters)</string>
     <string name="start">start</string>
     <string name="wifi_name">WiFi name</string>
     <string name="no_internet_message">Sorry wifi is not available</string>
