--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,12 @@
     <string name="wifi_name">WiFi name</string>
     <string name="no_internet_message">Sorry wifi is not available</string>
     <string name="current">current</string>
+    <string name="inside">INSIDE</string>
+    <string name="outside">OUTSIDE</string>
+    <string name="error_dialog_title">Oops</string>
+    <string name="cancel">Cancel</string>
+    <string name="connect">Connect</string>
+    <string name="connection_error_message">Sorry, something went wrong with the connection</string>
+    <string name="permission_error_message">Sorry, if you won\'t give permission, you can not use this app</string>
+    <string name="fence_error_message">Please, check your fence settings</string>
 </resources>
